--- a/css/main.css
+++ b/css/main.css
@@ -24,9 +24,7 @@ html.fp-enabled,
 
 .fp-section {
   position: relative;
-  -webkit-box-sizing: border-box;
   /* Safari<=5 Android<=3 */
-  -moz-box-sizing: border-box;
   /* <=28 */
   box-sizing: border-box; }
 
@@ -126,8 +124,6 @@ html.fp-enabled,
         top: 50%;
         margin: -2px 0 0 -2px;
         -webkit-transition: all 0.1s ease-in-out;
-        -moz-transition: all 0.1s ease-in-out;
-        -o-transition: all 0.1s ease-in-out;
         transition: all 0.1s ease-in-out; }
     #fp-nav ul li:hover a span,
     .fp-slidesNav ul li:hover a span {
@@ -270,190 +266,291 @@ html {
 /* Flex Stuff
    ========================================================================== */
 .flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column; }
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column; }
 
 .isInline {
   display: -inline-flex; }
 
 .is-row {
-  flex-direction: row; }
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row; }
 
 .isRowReverse {
-  flex-direction: row-reverse; }
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse; }
 
 .isColumn {
-  flex-direction: column; }
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column; }
 
 .isColumnReverse {
-  flex-direction: column-reverse; }
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse; }
 
 .isSingle {
-  flex-wrap: nowrap; }
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap; }
 
 .flexWrap {
-  flex-wrap: wrap; }
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap; }
 
 .isMultiple.isReverse {
-  flex-wrap: wrap-reverse; }
+  -ms-flex-wrap: wrap-reverse;
+      flex-wrap: wrap-reverse; }
 
 .spaceBetween {
-  justify-content: space-between; }
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
 
 .spaceAround {
-  justify-content: space-around; }
+  -ms-flex-pack: distribute;
+      justify-content: space-around; }
 
 .justify-center {
-  justify-content: center; }
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center; }
 
 .justifyEnd {
-  justify-content: flex-end; }
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end; }
 
 .justifyStart {
-  justify-content: flex-start; }
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start; }
 
 .contentCenter {
-  align-content: center; }
+  -ms-flex-line-pack: center;
+      align-content: center; }
 
 .align-center {
-  align-items: center; }
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+              -ms-grid-row-align: center;
+          align-items: center; }
 
 .alignEnd {
-  align-items: flex-end; }
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+              -ms-grid-row-align: flex-end;
+          align-items: flex-end; }
 
 .alignStart {
-  align-items: flex-start; }
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+              -ms-grid-row-align: flex-start;
+          align-items: flex-start; }
 
 .alignBaseline {
-  align-items: baseline; }
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+              -ms-grid-row-align: baseline;
+          align-items: baseline; }
 
 .selfCenter {
-  align-self: center; }
+  -ms-flex-item-align: center;
+      align-self: center; }
 
 .selfStart {
-  align-self: flex-start; }
+  -ms-flex-item-align: start;
+      align-self: flex-start; }
 
 .selfEnd {
-  align-self: flex-end; }
+  -ms-flex-item-align: end;
+      align-self: flex-end; }
 
 .selfAuto {
-  align-self: auto; }
+  -ms-flex-item-align: auto;
+      align-self: auto; }
 
 .selfBaseline {
-  align-self: baseline; }
+  -ms-flex-item-align: baseline;
+      align-self: baseline; }
 
 .contentCenter {
-  align-content: center; }
+  -ms-flex-line-pack: center;
+      align-content: center; }
 
 .contentStretch {
-  align-content: stretch; }
+  -ms-flex-line-pack: stretch;
+      align-content: stretch; }
 
 .flexNone {
-  flex: 0 0 auto; }
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto; }
 
 .flexInitial {
-  flex: 0 1 auto; }
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 auto;
+          flex: 0 1 auto; }
 
 .flexAuto {
-  flex: 1 1 auto; }
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto; }
 
 .flex0050 {
-  flex: 0 0 50%; }
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 50%;
+          flex: 0 0 50%; }
 
 .flexOne0auto {
-  flex: 1 0 auto; }
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 auto;
+          flex: 1 0 auto; }
 
 .flexOne {
-  flex: 1; }
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1; }
 
 .flexRowStart {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: row; }
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row; }
 
 .flexRowSpaceBetween {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: space-between; }
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between; }
 
 .flexColumnStart {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  flex-direction: column; }
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column; }
 
 .flexRowNoWrap {
-  flex-flow: row nowrap; }
+  -ms-flex-flow: row nowrap;
+      flex-flow: row nowrap; }
 
 .dontFlex {
-  flex: none; }
+  -webkit-box-flex: 0;
+      -ms-flex: none;
+          flex: none; }
 
 .isFull {
-  flex-basis: 100%;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
   max-width: 100%; }
 
 .isHalf {
-  flex-basis: 50%;
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
   margin: 0 1px;
   max-width: 49%; }
 
 .isThirds {
-  flex-basis: 33%;
+  -ms-flex-preferred-size: 33%;
+      flex-basis: 33%;
   max-width: 33%; }
 
 .isTwoThirds {
-  flex-basis: 67%;
+  -ms-flex-preferred-size: 67%;
+      flex-basis: 67%;
   max-width: 67%; }
 
 .isQuarters {
-  flex-basis: 24%;
+  -ms-flex-preferred-size: 24%;
+      flex-basis: 24%;
   margin: 0 2px;
   max-width: 24%; }
 
 .isThreeFifths {
-  flex-basis: 59%;
+  -ms-flex-preferred-size: 59%;
+      flex-basis: 59%;
   margin: 0 2px;
   max-width: 59%; }
 
 .isTwoFifths {
-  flex-basis: 39%;
+  -ms-flex-preferred-size: 39%;
+      flex-basis: 39%;
   margin: 0 2px;
   max-width: 39%; }
 
 .isOneFifth {
-  flex-basis: 19%;
+  -ms-flex-preferred-size: 19%;
+      flex-basis: 19%;
   margin: 0 2px;
   max-width: 19%; }
 
 .isFourFifths {
-  flex-basis: 79%;
+  -ms-flex-preferred-size: 79%;
+      flex-basis: 79%;
   margin: 0 2px;
   max-width: 79%; }
 
 .isOneTenth {
-  flex-basis: 9%;
+  -ms-flex-preferred-size: 9%;
+      flex-basis: 9%;
   margin: 0 2px;
   max-width: 9%; }
 
 .isThreeTenths {
-  flex-basis: 29%;
+  -ms-flex-preferred-size: 29%;
+      flex-basis: 29%;
   margin: 0 2px;
   max-width: 29%; }
 
 .isSevenTenths {
-  flex-basis: 69%;
+  -ms-flex-preferred-size: 69%;
+      flex-basis: 69%;
   margin: 0 2px;
   max-width: 69%; }
 
 .isNineTenths {
-  flex-basis: 89%;
+  -ms-flex-preferred-size: 89%;
+      flex-basis: 89%;
   margin: 0 2px;
   max-width: 89%; }
 
 .flexGrow {
-  flex-grow: 2; }
+  -webkit-box-flex: 2;
+      -ms-flex-positive: 2;
+          flex-grow: 2; }
 
 .flexChild > div {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex; }
 
 @font-face {
@@ -586,7 +683,7 @@ a {
 .logo {
   position: fixed;
   top: 4%;
-  left: 2%;
+  left: 4%;
   z-index: 25;
   margin: 0;
   display: none; }
@@ -599,6 +696,7 @@ a {
 nav {
   position: fixed;
   z-index: 12;
+  background: #000;
   width: 100%;
   height: 100%;
   text-align: center;
@@ -607,7 +705,8 @@ nav {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%); }
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%); }
     nav ul li {
       list-style: none; }
       nav ul li a {
@@ -625,7 +724,7 @@ nav {
 .navbar-toggle {
   position: fixed;
   top: 4%;
-  right: 2%;
+  right: 4%;
   z-index: 20;
   cursor: pointer; }
   .navbar-toggle #menu {
@@ -639,7 +738,8 @@ nav {
       width: 40px;
       height: 1px;
       margin-bottom: 6px;
-      transform: translateX(10px); }
+      -webkit-transform: translateX(10px);
+              transform: translateX(10px); }
 
 /* FOOTER ELEMENTS
    ========================================================================== */
@@ -740,7 +840,8 @@ hr {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   text-align: center; }
 
 /* Homepage - pulsing button */
@@ -748,7 +849,8 @@ hr {
   position: absolute;
   top: 90%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   width: 50px;
   height: 50px; }
   .pulse .pulse-button {
@@ -827,13 +929,14 @@ hr {
 .ux-slide-01 {
   background: #1f2a52;
   text-align: center; }
-  .ux-slide-01 .ux-slide-01 svg {
+  .ux-slide-01 .p-symbol-container svg {
     position: absolute;
     fill: #24305e;
     width: 50%;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%); }
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%); }
   .ux-slide-01 section {
     margin: 25px; }
   .ux-slide-01 .quote-text {
@@ -842,8 +945,13 @@ hr {
 .ux-slide-02 {
   background: #1f2a52; }
   .ux-slide-02 .wrapper-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column; }
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column; }
     .ux-slide-02 .wrapper-container .ux-image {
       width: 35%;
       margin: 100px auto 0; }
@@ -874,43 +982,76 @@ hr {
  */
 @media (min-width: 550px) {
   .ux-slide-03 {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex; }
     .ux-slide-03 .wrapper-container {
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
-      flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
       max-width: 960px;
       margin: 0 auto;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column; }
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column; }
       .ux-slide-03 .wrapper-container .screens-container {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
         margin: 0 auto;
         width: 60%; }
       .ux-slide-03 .wrapper-container .screen {
-        flex: 0 1 40%; } }
+        -webkit-box-flex: 0;
+            -ms-flex: 0 1 40%;
+                flex: 0 1 40%; } }
 
 /**
  * LARGER THAN TABLET
  */
 @media screen and (min-width: 750px) {
   .ux-slide-02 {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex; }
     .ux-slide-02 .wrapper-container {
-      flex-direction: row;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: row;
+              flex-direction: row;
       max-width: 960px;
       margin: 0 auto;
-      align-items: center; }
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+                  -ms-grid-row-align: center;
+              align-items: center; }
       .ux-slide-02 .wrapper-container .ux-image {
-        flex: 1; }
+        -webkit-box-flex: 1;
+            -ms-flex: 1;
+                flex: 1; }
       .ux-slide-02 .wrapper-container .ux-slide01-text {
-        flex: 3; }
+        -webkit-box-flex: 3;
+            -ms-flex: 3;
+                flex: 3; }
   .ux-slide-03 .wrapper-container .screens-container {
     width: 80%; }
   .ux-slide-03 .wrapper-container .screen {
-    flex: 0 1 20%; } }
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 20%;
+            flex: 0 1 20%; } }
 
 /* Larger than desktop */
 /* Larger than Desktop HD */
@@ -922,7 +1063,8 @@ hr {
     width: 70%;
     fill: transparent;
     stroke: #E94444;
-    transform: translateY(15px);
+    -webkit-transform: translateY(15px);
+            transform: translateY(15px);
     display: none; }
 
 /* Larger than mobile */
@@ -965,25 +1107,45 @@ hr {
   .about-page h1, .about-page h4, .about-page p, .about-page li {
     color: #E94444; }
   .about-page .about-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     text-align: center;
     max-width: 960px;
     margin: 0 auto;
-    align-items: center;
-    justify-content: center; }
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
   .about-page li {
     list-style-type: none; }
   .about-page .about-wrapper {
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap; }
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap; }
     .about-page .about-wrapper .web-deveopment {
-      flex: 1; }
+      -webkit-box-flex: 1;
+          -ms-flex: 1;
+              flex: 1; }
     .about-page .about-wrapper .design {
-      flex: 1; }
+      -webkit-box-flex: 1;
+          -ms-flex: 1;
+              flex: 1; }
     .about-page .about-wrapper .tools {
-      flex: 1; }
+      -webkit-box-flex: 1;
+          -ms-flex: 1;
+              flex: 1; }
 
 @media print {
   header,
