--- a/css/sass/components/_nav.scss
+++ b/css/sass/components/_nav.scss
@@ -5,7 +5,7 @@
 .logo {
 	position: fixed;
 	top: 4%;
-	left: 2%;
+	left: 4%;
 	z-index: 25;
 	margin: 0;
 		img {
@@ -21,7 +21,7 @@
 nav {
 	position: fixed;
 	z-index: 12;
-	// background: #000;
+	background: #000;
 	width: 100%;
 	height: 100%;
 	text-align: center;
@@ -56,7 +56,7 @@ nav {
 .navbar-toggle {
 	position: fixed;
 	top: 4%;
-	right: 2%;
+	right: 4%;
 	z-index: 20;
 	cursor: pointer;
 
