--- a/css/sass/pages/_ux.scss
+++ b/css/sass/pages/_ux.scss
@@ -24,7 +24,7 @@
 	background: #1f2a52;
 	text-align: center;
 
-	.ux-slide-01 svg {
+	.p-symbol-container svg {
 		position: absolute;
 		fill: #24305e;
 		width: 50%;
@@ -35,6 +35,7 @@
 
 	section {
 		margin: 25px;
+		// background: green;
 	}
 	.quote-text {
 		font-size: 1.5em;
@@ -44,7 +45,6 @@
 
 .ux-slide-02 {
 	background: #1f2a52;
-	// background: #ffb5bf;
 	.wrapper-container {
 		display: flex;
 		flex-direction: column;
@@ -60,7 +60,6 @@
 
 .ux-slide-03 {
 	background: #1f2a52;
-	// background: #ffb5bf;
 	.screens-container {
 		margin: 0 auto;
 		width: 55%;
